--- a/css/center_divs.css
+++ b/css/center_divs.css
@@ -3,6 +3,8 @@ body,html{
 height: 100%;
 background: #ffffff;
 padding: 0;
+padding-left: 10px;
+padding-right: 10px;
 margin: 0;
 }
 #table{
@@ -37,3 +39,19 @@ margin: auto;
 #div70{
 height: 70px;
 }
+
+#btn-agregar{
+border-style: dashed;
+width: 220px;
+height: 300px;
+}
+
+#txt-agregar{
+font-size: 20px;
+}
+
+.gi-2x{font-size: 2em;}
+.gi-1.5{font-size: 2.5em;}
+.gi-3x{font-size: 3em;}
+.gi-4x{font-size: 4em;}
+.gi-5x{font-size: 5em;}
