--- a/css/center_divs.css
+++ b/css/center_divs.css
@@ -1,12 +1,12 @@
 
 body,html{
 height: 100%;
+min-height: 100%;
 background: #ffffff;
 padding: 0;
-padding-left: 10px;
-padding-right: 10px;
 margin: 0;
 }
+
 #table{
 display: table;
 width: 300px;
@@ -56,8 +56,52 @@ vertical-align: middle;
 font-size: 20px;
 }
 
+
 .gi-2x{font-size: 2em;}
 .gi-1.5{font-size: 2.5em;}
 .gi-3x{font-size: 3em;}
 .gi-4x{font-size: 4em;}
 .gi-5x{font-size: 5em;}
+
+#footer{
+	position: absolute;
+	bottom:0;
+	width: 100%;
+	
+}
+
+#recuadro{
+height: 250px;
+margin: 0;
+padding: 0;
+padding-top: 90px;
+border: 2px solid;
+border-color: #ddd;
+}
+
+#usuario{
+	margin-top:23px;
+	margin-right: 10px;
+	border: 10px solid;
+border-color: #ddd;
+	width:140px;
+	height:232px;
+	border-width:1px;
+	padding:inherit;
+	padding-top:42px;
+	
+	}
+
+#usuario1{
+	display:block;
+	position:absolute;
+	right:1px;
+}
+
+#txtUsuario{
+	font-size:15px;
+}
+
+#txtfooter{
+	margin-top:12px;
+}
