--- a/css/center_divs.css
+++ b/css/center_divs.css
@@ -4,6 +4,8 @@ height: 100%;
 min-height: 100%;
 background: #ffffff;
 padding: 0;
+padding-left: 10px;
+padding-right: 10px;
 margin: 0;
 }
 
@@ -70,57 +72,52 @@ font-size: 20px;
 	
 }
 
-<<<<<<< HEAD
 #recuadro{
-height: 250px;
-margin: 0;
-padding: 0;
-padding-top: 90px;
-border: 2px solid;
-border-color: #ddd;
-}
-
-#usuario{
 	margin-top:23px;
-	margin-right: 10px;
-	border: 10px solid;
-border-color: #ddd;
-	width:140px;
-	height:232px;
+	border-style: solid;
+	border-color: gray;
+	width:160px;
+	height:227px;
 	border-width:1px;
 	padding:inherit;
-	padding-top:42px;
-	
+	padding-top:37px;	
 	}
 
-=======
 #usuario{
-	margin-top:3px;
-	border-style:solid;
-	width:140px;
-	height:192px;
-	border-width:1px;
-	padding:inherit;
-	padding-top:12px;
-	
-	}
->>>>>>> origin/master
-#usuario1{
 	display:block;
 	position:absolute;
 	right:1px;
 }
-<<<<<<< HEAD
 
-#txtUsuario{
-	font-size:15px;
+
+#txt-usuario{
+	font-size:20px;
 }
 
-=======
-#txtUsuario{
-	font-size:15px;
-}
->>>>>>> origin/master
 #txtfooter{
 	margin-top:12px;
+}
+
+
+#usuario{
+	margin-top:18px;
+	width: 310px;
+	height:192px;
+	border-width:1px;
+	padding:inherit;
+	padding-top:12px;
+	padding-left: 15px;
+	padding-right: 
+	
+	}
+#recuadro{
+	display:block;
+	position:absolute;
+	width: 300px;
+}
+
+#icono-usuario{
+	color: #c90e27;
+	/*color: #a10d26;*/
+	
 }
