Más diseño para el botón y la ventana

--- a/css/center_divs.css
+++ b/css/center_divs.css
@@ -102,9 +102,13 @@ font-size: 20px;
 	/*color: #a10d26;*/
 	
 }
-
+/*
 #obras{
-	display: table;
+	display: inline;
+}*/
+
+#obra{
+	display: inline;
 }
 
 #ver-obra{
